static/css/custom.css
/* ... */
audio, canvas, progress, video {
  display: inline-block;
  vertical-align: baseline;
}
@media (min-width: 480px) {
  section#fh5co-home .hero-video-container:after {
    background-color: rgba(0,0,0,.4);
    content: " ";
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%
  }
}
/* TODO Alterar fonte para outras media-queries */
section#fh5co-home .text-inner h1 {
  /* font-size: 4.5rem; */
  font-size: 4rem;
  letter-spacing: normal;
}
@media (min-width: 768px) {
  section#fh5co-home .text-inner h1 {
    /* font-size: 4rem; */
    font-size: 4.5rem;
  }
}
@media (min-width: 960px) {
  section#fh5co-home .text-inner h1 {
    font-size: 6rem;
    letter-spacing: 0.025em;
  }
}


@media screen and (max-device-width: 800px) {
  /* section#fh5co-home .hero-video-container video { */
  section#fh5co-home .hero-video-container {
    display: none;
  }
}
@media screen and (min-device-width: 801px) {
  section#fh5co-home > .gradient {
    opacity: 0.4;
  }
  section#fh5co-home > .slant {
    z-index: 3;
    height: 90px;
    margin-bottom: -20px;
  }
}


/* ########################################################################### */

.navbar-header .navbar-brand > figure svg {
  display: block;
}
.navbar-header .navbar-brand svg {
  max-width: 50vw;
  width: 180px;
}
@media (min-width: 480px) {
  .navbar-header .navbar-brand svg {
    max-width: 40vw;
  }
}


/* ########################################### */
/* Section photo background */


/* div.section-photo-bg { */
section#fh5co-about.section-photo-bg,
section#fh5co-contact > .section-photo-bg {
  margin: 0 auto;
  width: 100%;
  position: relative;
}
section#fh5co-about.section-photo-bg {
  background: 
    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../images/bg-section-about.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position-x: center;
}
section#fh5co-contact > .section-photo-bg {
  background: 
    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../images/bg-section-contact.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}
#fh5co-about:before, #fh5co-about:after,
#fh5co-contact > .section-photo-bg:before {
  position: absolute;
  transform: rotate(-1.7deg);
  -ms-transform: rotate(-1.7deg);
  -webkit-transform: rotate(-1.7deg);
  -o-transform: rotate(-1.7deg);
  -moz-transform: rotate(-1.7deg);
  background-color: #fff;
  content: "";
  z-index: 3;
  display: inline-block;
  height: 70px;
  padding: 0;
  width: 101%;
}
#fh5co-contact {
  padding-top: 0;
}

#fh5co-about:before,
#fh5co-contact > .section-photo-bg:before {
  top: 0;
  margin-top: -35px;
}
#fh5co-about:after,
#fh5co-contact > .section-photo-bg:after {
  bottom: 0;
  margin-bottom: -35px;
}

#fh5co-about h2,
#fh5co-contact h2 {
  color: #fff;
}
#fh5co-about h3,
#fh5co-contact h3 {
  color: rgba(255, 255, 255, 0.8);
}
@media screen and (max-width: 768px) {
  #fh5co-services.section-photo-bg, #fh5co-testimonials.section-photo-bg,
  #fh5co-counters.section-photo-bg, #fh5co-work.section-photo-bg,
  #fh5co-contact > .section-photo-bg, #fh5co-about.section-photo-bg {
    padding-top: 4em;
  }
}
@media screen and (min-width: 769px) {
  #fh5co-contact .section-heading {
    padding-top: 80px;
  }
  #fh5co-contact form {
    margin-top: 1.5em;
  }
}

